public class Crochet extends Pattern {

    public Crochet(int id, String name, String craftType, String level, int yarnAmount, double needleSize, String gauge, String yarnType, String category, String pathtopdf) {
        super(id, name, craftType, level, yarnAmount, needleSize, gauge, yarnType, category, pathtopdf);
    }

}
