public class Knit extends Pattern {

    public Knit(int id, String name, String craftType, String level, int yarnAmount, double needleSize, String gauge, String yarnType, String category, String pathtopdf) {
        super(id, name, craftType, level, yarnAmount, needleSize, gauge, yarnType, category, pathtopdf);
    }

}
