    import java.io.File;
    import java.util.ArrayList;
    import java.util.List;


    public class Main {
        public static void main(String[] args)  {

            StartMenu start = new StartMenu();

            start.welcomeMessage();
            start.startSession();



        }
    }