    @startuml
'https://plantuml.com/class-diagram

class Main

class StartMenu {
+ void welcomeMessage()
+ void startSession()
+ ArrayList<Pattern> chooseKnitOrCrochet()
+ ArrayList<Pattern> chooseYarnAmount()
+ ArrayList<Pattern> chooseLevel()
+ void printOptions()
+ Pattern selectPattern()
+ void tryAgain()
+ void askToOpenPdf()
+ void endSession()
}

class Pattern {
- int id
- String name
- String craftType
- String level
- int yarnAmount
- double needleSize
- String gauge
- String yarnType
- String category
- String pathtopdf
+ String toString()
+ int getId()
+ String getName()
+ String getCraftType()
+ String getLevel()
+ int getYarnAmount()
+ double getNeedleSize()
+ int getGauge()
+ String getYarnType()
+ String getCategory()
+ String getPathtopdf()
}

class Knit {
}

class Crochet {
}

class OpenPdf {
+ void openPdfByPath()
}

package util {
class TextUI {
+ String displayMessage()
+ String promptText()
+ int promptNumber()
+ boolean promptYesOrNo()
}
}

class DBConnection {
+ Connection getConnection()
}

class DBInquiries {
+ ArrayList<Pattern> getAllPatterns()
}

dataclass Database {
}


Main *-- StartMenu
StartMenu -- Pattern
StartMenu .> TextUI
Pattern <|-- Knit
Pattern <|-- Crochet
StartMenu ..> DBInquiries
DBInquiries ..> DBConnection
StartMenu ..> OpenPdf
Pattern *-- Database


@enduml